fix margin spacing on tables and text

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -114,6 +114,7 @@ table thead th {
 table td {
   padding: 10px;
   text-align: center;
+  margin-left: 80px;
 }
 
 #list td:nth-child(2), #list td:nth-child(3){
@@ -235,7 +236,6 @@ main {
 h2 {
 	font-size: 36px;
 	font-weight: bold;
-	margin-bottom: 20px;
 }
 
 p {
@@ -268,36 +268,32 @@ h3 {
 }
 
 .collection-table {
-  margin-top: 40px;
   border-width: 11px;
   border-style: outset;
   box-sizing: border-box;
 }
 
 .comment-form {
-  margin-top: 40px;
   border-width: 11px;
   border-style: outset;
   box-sizing: border-box;
 }
 
 .comment-table {
-  margin-top: 40px;
   border-width: 11px;
   border-style: outset;
   box-sizing: border-box;
-  justify-content: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .sneaker-table {
-  margin-top: 40px;
   border-width: 11px;
   border-style: outset;
   box-sizing: border-box;
 }
 
 .new-sneaker {
-  margin-top: 40px;
   border-width: 11px;
   border-style: outset;
   box-sizing: border-box;
